改造原生和Docker为模板方法